[workspace]
members = ["common", "master", "worker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Distributed Crawler Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
