[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
common = { path = "../common" }
futures = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
