[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
common = { path = "../common" }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
